<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, BusaoActivity!</string>
    <string name="app_name">Busão</string>
    
    <!-- Splash Screen -->
    <string name="description">Splash Screen</string>
    <string name="versao">versão 1.0</string>
    
    <!-- Loading -->
    <string name="progress_msg">loading</string>
    
    <!-- Exceptions -->
    <string name="sem_conexao">Sem conexão</string>
    <string name="nenhum_dado_retornado">Nenhum dado retornado</string>
    
    <!-- Menu principal -->
	<string name="bem_vindo">bem vindo!</string>
	<string name="menu_localidade">localidade</string>
	<string name="menu_buscar">buscar</string>
	<string name="menu_turismo">turismo</string>
	<string name="menu_ajuda">ajuda</string>
	<string name="compartilhar">compartilhar</string> 
    
	<string name="bem_vindo_desc">O BUSÃO é um aplicativo que da uma perspectiva ao 
	usuário do tempo para a passagem do próximo ônibus. Além disso, 
	informamos as rotas que levam aos pontos turísticos, compartilhamento 
	de redes sociais e muito mais!!!! Aproveite !</string>
	
	<string name="localidade_desc">No menu localidade, você terá acesso as melhores 
	    informações sobre a cidade em uso, como por exemplo o preço da tarifa do ônibus.
	    O BUSÃO cobre várias cidades do Nordeste, o usuário poderá modificar a cidade atual
	    a qualquer momento.</string>
	
	<string name="buscar_desc">A busca do aplicativo ajuda o usuário a encontrar um ônibus 
	    ou procurar rotas que atendam as suas necessidades. A busca pode ser realizada por 
	    linha específica ou GPS</string>
	    
	<string name="turismo_desc">O BUSÃO também informa as rotas de ônibus que levam aos 
	    pontos turísticos de cada cidade. Assim, você terá mais tempo para aproveitar 
	    as belezas arquitetônicas e culturais.
</string>
	
	<string name="compartilhar_desc">Escolha rotas com pontos turísticos e 
	    compartilhe com as redes sociais</string>
	 
	
	<string name="open">abrir</string>
	<string name="atual_localizacao">Sua localização: </string>


    <!-- Pesquisa -->
    <string name="dados_fornecidos">*Dados da STTP-Trans</string>
    <string name="informacao">informação</string>
    <string name="indisponivel">indisponível</string>
    
	
	<!-- Menu Ajuda -->
	<string name="ajuda_pre">pré-requisitos</string>
	<string name="ajuda_rotas">buscar rotas</string>
	<string name="ajuda_onibus">buscar ônibus</string>
	<string name="ajuda_mapas">mapas</string>
	<string name="ajuda_texto_pre_requisitos">É necessário que seu aparelho tenha acesso a Internet e GPS.</string>
	<string name="ajuda_texto_onibus">Para pesquisar por uma linha de ônibus específica (menu buscar > linha), selecione uma linha desejada e serão exibidos seus dados.</string>
	<string name="ajuda_texto_rotas">No menu buscar > rotas, marque no mapa os dois pontos desejados (podendo um destes ser sua localização atual) e se houver alguma linha de ônibus que passe por estes pontos, serão exibidos seus dados.</string>
	<string name="ajuda_texto_mapas">Em buscar > mapas, poderão ser visualizadas as rotas marcadas como favoritas.</string>
	<string name="ajuda_rotas_favoritas">favoritar rotas</string>
	<string name="ajuda_pontos_turisticos">pontos turísticos</string>
	<string name="ajuda_texto_rotas_favoritas">Para favoritar rotas de seu interesse, marque a mesma como favorita na tela de resultados. No menu buscar > favoritos, 
	    clique na rota e veja seu percurso sem necessidade de pesquisa. Para apagar a rota de suas rotas favoritas, pressione o item por alguns segundos</string>
	<string name="ajuda_texto_pontos_turisticos">No menu turismo, pressione por alguns segundos o ponto turísticos desejado e o BUSÃO listará as rotas que passam
	    pelo local. Compartilhe a informação clicando nos icones do facebook e twitter</string>
	
	<!-- Popup Resultado -->
	<string name="result_faltam">Faltam</string>
	<string name="result_minutos">Minutos</string>
	<string name="result_inicio">Início</string>
	<string name="result_termino">Término</string>
	<string name="result_empresa">Empresa</string>
	<string name="result_ok">ok</string>
	<string name="result_voltar">voltar</string>
	<string name="result_onibus">ônibus encontrados</string>
	<string name="result_result">Resultados da busca</string>
	<string name="result_mapa">mapa</string>
	<string name="result_sem_mapa">Mapa indisponível</string>
	<string name="result_sem_resultado">Nenhuma rota encontrada</string>
	
	
	<!-- Cidades -->
	
	<string name="cidade_titulo_inicial">você está em</string>
	<string name="texto_tarifa">Preço da tarifa: R$</string>
	
	<string name="titulo_campinagrande">Campina Grande, Paraiba</string>
	<string name="titulo_joaopessoa">Joao Pessoa, Paraiba</string>
	
	<string name="cidade_campinagrande">Considerada um dos principais polos industriais da Região Nordeste e o maior polo tecnológico da América Latina, 
	    Campina Grande foi elevada a categoria de cidade em 11 de outubro de 1864. A cidade possui uma agenda cultural variada, destancando-se os festejos de São João, 
	    que acontecem durante todo mês de junho, o Encontro da Nova Consciência, um encontro ecumênico realizado durante o carnaval, além do Festival de Inverno.
		De acordo com o senso de 2010, a população gira em torno de 400 mil habitantes. É considerada a cidade mais dinâmica do nordeste e a 6a cidade mais dinâmica do Brasil.</string>
		
	<string name="cidade_joaopessoa">Capital do Estado da Paraiba, Joao Pessoa e conhecida como "Portal do Sol", devido ao fato de no município estar localizada a 
	    Ponta do Seixas, que é o ponto mais oriental das Americas, o que faz a cidade ser conhecida como o lugar "onde o Sol nasce primeiro nas Americas". O municipio 
	    e também notavel pelo clima tropical, e uma das capitais de melhor qualidade de vida no Nordeste.</string>
	<string name="descricao_about">www.busaoapp.com</string>
	
	<string name="descricao_popup_cidade">Escolha uma cidade para visualizar suas rotas</string>
	
	<string name="botao_confirmar">confirmar</string>
	<string name="botao_cancelar">cancelar</string>
	<string name="botao_ok">ok</string>
	<string name="botao_voltar">voltar</string>
	<string name="botao_mapa">mapa</string>
	<string name="botao_alterar_cidade">alterar cidade</string>
	<string name="titulo_alterar_cidade">alterar cidade</string>
	<string name="faltam">faltam</string>
	<string name="minutos">min</string>
	
	<!-- MAPA -->
	
	<string name="obs_rotas">As informações aqui contidas sobre as rotas de ônibus foram fornecidas pelos órgãos responsáveis de cada município</string>
	<string name="busca_label_onibus">Linha</string>
	<string name="busca_label_rota">Rota</string>
	<string name="busca_label_favoritos">Favoritos</string>
	    <string name="loading">Loading&#8230;</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_comment_title">Comment</string>
    <string name="dialog_comment_placeholder">Write something&#8230;</string>
    <string name="dialog_post_to_wall_title">Post to Wall</string>
    <string name="dialog_post_to_wall_placeholder">Say something about this&#8230;</string>
    <string name="sem_ponto_selecionado">Insira ao menos um ponto para prosseguir com a pesquisa</string>
	
    <!-- LIST ROUTE -->
    
    <string name="num_onibus">Num ônibus: </string>
    <string name="dif_onibus">Dif ônibus: </string>
    <string name="hora_inicio">Hora Início: </string>
    <string name="hora_fim">Hora Fim: </string>
    <string name="add_rota">Rota adicionada com sucesso!</string>
    <string name="rota_ja_existe">Rota já está cadastrada</string>
    <string name="delete_rota">Rota removida com sucesso!</string>
    <string name="erro_rota">Um erro ocorreu ao tentar salvar a rota</string>
    
    <!-- TWITTER -->
    
    <string name="nenhum_app_twitter">Seu aparelho nao possui nenhum aplicativo para realizar o tweet</string>
    <string name="error_ao_twittar">Um erro ocorreu ao tentar realizar o tweet</string>
    
    <!-- FACEBOOK -->
    
    <string name="nenhum_app_facebook">Seu aparelho nao possui o aplicativo do facebook</string>
    <string name="sucesso_facebook">Post Enviado!</string>
    <string name="error_facebook">Um erro ocorreu ao tentar postar no facebook</string>
    
</resources>