<RelativeLayout android:id="@+id/relativeLayout1"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	xmlns:android="http://schemas.android.com/apk/res/android" android:gravity="bottom">
	
    <LinearLayout android:layout_height="wrap_content"
    android:id="@+id/linearLayout1" 
    android:layout_width="144px" 
    android:layout_alignParentTop="true" 
    android:layout_alignParentLeft="true" 
    android:layout_alignParentBottom="true"
    android:background="@drawable/background_menu" android:orientation="vertical" android:weightSum="1">
    
        <TableLayout android:layout_width="match_parent" android:id="@+id/tableLayout1" android:layout_height="match_parent" android:layout_weight="1">
            <TableRow android:id="@+id/rowLogoBusao" android:layout_width="wrap_content" android:gravity="top" android:layout_weight="1" android:layout_height="0dp"> 
                <ImageView android:layout_width="wrap_content" android:id="@+id/imageView1" android:layout_height="wrap_content" android:src="@drawable/logo_transparente_menu" android:layout_gravity="top"></ImageView>
            
            </TableRow>
            <TableRow android:gravity="bottom" android:id="@+id/tableRowFora2" android:layout_width="wrap_content" android:layout_weight="1" android:layout_height="0dp" android:layout_gravity="bottom">
                <TableLayout android:id="@+id/tableLayout1" android:layout_width="match_parent" android:layout_gravity="bottom" android:layout_height="wrap_content">
            <TableRow android:id="@+id/tableRow1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="bottom">
	             <ImageView android:id="@+id/separar" android:layout_width="wrap_content"
		          android:layout_height="wrap_content" android:src="@drawable/sombra_menu_botoes" />
            </TableRow>
            <TableRow android:id="@+id/rowLocalidade" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="bottom">
                <TextView android:id="@+id/textLocalidade" 
                android:layout_height="wrap_content" 
                android:textAppearance="?android:attr/textAppearanceMedium" 
                android:text="@string/menu_localidade" 
                android:layout_width="wrap_content"
                android:textSize="15dp"
                android:layout_gravity="right" android:layout_marginTop="10px" android:layout_marginBottom="10px"></TextView>
            </TableRow>
            <TableRow android:id="@+id/tableRow1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="bottom">
	             <ImageView android:id="@+id/separar" android:layout_width="wrap_content"
		          android:layout_height="wrap_content" android:src="@drawable/sombra_menu_botoes" />
            </TableRow>
            <TableRow android:id="@+id/rowBuscar" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="bottom">
            	<TextView android:id="@+id/textBuscar"
            	 android:layout_height="wrap_content"
            	  android:textAppearance="?android:attr/textAppearanceMedium"
            	   android:text="@string/menu_buscar" 
            	   android:layout_width="wrap_content"
            	android:textSize="15dp"
                android:layout_gravity="right" android:layout_marginTop="10px" android:layout_marginBottom="10px"></TextView>
            </TableRow>
            <TableRow android:id="@+id/tableRow1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="bottom">
	             <ImageView android:id="@+id/separar" android:layout_width="wrap_content"
		          android:layout_height="wrap_content" android:src="@drawable/sombra_menu_botoes" />
            </TableRow>
            <TableRow android:id="@+id/rowTurismo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="bottom">
            	<TextView android:id="@+id/textTurismo"
            	android:layout_height="wrap_content" 
            	android:textAppearance="?android:attr/textAppearanceMedium" 
            	android:text="@string/menu_turismo" 
            	android:layout_width="wrap_content" 
            	android:textSize="15dp"
                android:layout_gravity="right" android:layout_marginTop="10px" android:layout_marginBottom="10px"></TextView>
            </TableRow>
            <TableRow android:id="@+id/tableRow1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="bottom">
	             <ImageView android:id="@+id/separar" android:layout_width="wrap_content"
		          android:layout_height="wrap_content" android:src="@drawable/sombra_menu_botoes" />
            </TableRow>
            <TableRow android:id="@+id/rowAjuda" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="bottom">
                <TextView android:id="@+id/textAjuda" 
                android:layout_height="wrap_content" 
                android:textAppearance="?android:attr/textAppearanceMedium" 
                android:text="@string/menu_ajuda" 
                android:layout_width="wrap_content" 
                android:textSize="15dp"
                android:layout_gravity="right" android:layout_marginTop="10px" android:layout_marginBottom="10px"></TextView>
            </TableRow>
        </TableLayout>
            
            </TableRow>
        </TableLayout>
        
    </LinearLayout>

    <include
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/linearLayout1"
        layout="@layout/horizontal_scroll_view" />

</RelativeLayout>
